css/index.css
/* ... */
@media (max-width: 1200px) {
    .card__options {
        z-index: 14;
        top: 50%;
        bottom: auto;
        padding: 21px 20px;
        -webkit-transform: translateY(-45%);
            -ms-transform: translateY(-45%);
                transform: translateY(-45%);
        pointer-events: none; 
        border: 1px solid #d7d7d7;
        border-radius: 4px;
        background: white;
        -webkit-box-shadow: 0 27px 27px rgba(0, 0, 0, .15);
                box-shadow: 0 27px 27px rgba(0, 0, 0, .15);
    }
}
.card__options::before {
    position: absolute;
    z-index: -1;
    top: 0;
    left: -15px;
    width: calc(100% + 30px);
    height: calc(100% + 15px);
    content: '';
    pointer-events: none; 
    background: white;
    -webkit-box-shadow: 0 13px 60px rgba(0, 0, 0, .15);
            box-shadow: 0 13px 60px rgba(0, 0, 0, .15);
}
@media (max-width: 1200px) {
    .card__options::before {
        display: none;
    }
}
.card__options._is-visible {
    visibility: visible !important;
    pointer-events: all !important; 
    opacity: 1 !important;
}
.card__show-options {
    position: absolute;
    z-index: 15; 
    right: 20px;
    bottom: 23px;
    display: none;
    visibility: hidden;
    -webkit-box-align: center;
    align-items: center;
    -ms-flex-align: center;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
    width: 50px;
    height: 50px;
    -webkit-transition: -webkit-transform .3s ease;
         -o-transition:         transform .3s ease;
            transition: -webkit-transform .3s ease;
            transition:         transform .3s ease;
            transition:         transform .3s ease, -webkit-transform .3s ease;
    pointer-events: none;
    border-radius: 100%;
    -webkit-box-shadow: 0 4px 14px rgba(0, 0, 0, .15);
            box-shadow: 0 4px 14px rgba(0, 0, 0, .15);
}
@media (max-width: 1200px) {
    .card__show-options {
        display: -webkit-box;
        display: -ms-flexbox;
        display: flex;
        visibility: visible;
        pointer-events: all;
    }
}
.card__show-options._is-active {
    -webkit-transform: rotate(135deg);
        -ms-transform: rotate(135deg);
            transform: rotate(135deg);
}
.card:hover {
    z-index: 13;
}
.card:hover::before,
.card:hover::after {
    opacity: 1;
}
.card:hover .card__slider {
    position: relative;
    z-index: 11;
    visibility: visible; 
    opacity: 1;
}
.card:hover .card__image {
    z-index: 10;
}
.card:hover .card__options {
    visibility: visible;
    pointer-events: all; 
    opacity: 1;
}
@media (max-width: 1200px) {
    .card:hover .card__options {
        visibility: hidden; 
        opacity: 0;
    }
}

.card-slider {
    overflow: visible;
}
.card-slider__slide {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    overflow: hidden; 
    -webkit-box-align: center;
    align-items: center;
    -ms-flex-align: center;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
    height: 150px;
    background: white;
}
@media (max-width: 1200px) {
    .card-slider__slide {
        background: #f8f8f8;
    }
}
@media (max-width: 570px) {
    .card-slider__slide {
        height: 45vw;
    }
}
@media (max-width: 375px) {
    .card-slider__slide {
        height: 160px;
    }
}
.card-slider__nav {
    position: absolute;
    z-index: 1;
    bottom: -30px !important;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
}
.card-slider__bullet {
    position: relative; 
    display: block;
    width: 8px;
    height: 8px;
    margin: 4px 7px;
    padding: 4px;
    opacity: 1;
    border-radius: 100%;
    background: #999999;
}
.card-slider__bullet::before {
    position: absolute;
    top: -50%;
    left: -50%;
    width: 16px;
    height: 16px;
    content: '';
    background: transparent;
}
.card-slider__bullet._is-active {
    background: #222222;
}

.card-options__item {
    position: relative; 
    -webkit-box-align: center;
    align-items: center;
    -ms-flex-align: center;
    width: 100%;
    padding: 8px 0;
}
.card-options__item::after {
    position: absolute;
    top: 0;
    left: -15px;
    width: calc(100% + 30px);
    height: 100%;
    content: '';
    -webkit-transition: opacity .3s ease;
         -o-transition: opacity .3s ease;
            transition: opacity .3s ease; 
    opacity: 0;
    background: #000000;
}
.card-options__item:not(:last-child) {
    margin-bottom: 0;
}
.card-options__item:hover::after {
    opacity: .05;
}

.header {
    position: relative;
    z-index: 21;
}

.mobile-nav {
    position: fixed;
    visibility: hidden;
    width: 100%;
    height: calc(100vh - 60px);
    -webkit-transition: all .6s ease;
         -o-transition: all .6s ease;
            transition: all .6s ease; 
    -webkit-transform: translateX(-100%);
        -ms-transform: translateX(-100%);
            transform: translateX(-100%);
    opacity: 0;
    background: white;
}
.mobile-nav__container {
    overflow-y: auto;
    height: 100%;
}
.mobile-nav__footer {
    position: fixed;
    bottom: 0;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: end;
    align-items: flex-end;
    -ms-flex-align: end;
    -webkit-box-pack: end;
    -ms-flex-pack: end;
    justify-content: flex-end;
    width: 100%;
    height: 25%;
    padding: 14px 22px; 
    background: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0)), color-stop(72.4%, #ffffff));
    background: -o-linear-gradient(top, rgba(255, 255, 255, 0) 0%, #ffffff 72.4%);
    background:    linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, #ffffff 72.4%);
}
.mobile-nav._is-visible {
    visibility: visible;
    -webkit-transform: translateX(0);
        -ms-transform: translateX(0);
            transform: translateX(0);
    opacity: 1;
}
/* ... */

